--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
   <name>hand_test</name>
   <version>0.0.0</version>
   <description>The hand_test package</description>
-  <maintainer email="ikuo@todo.todo">Ikuo Shige</maintainer>
+  <maintainer email="shigeikuo@gmail.com">Ikuo Shige</maintainer>
 
   <author email="tiryoh@gmail.com">Daisuke Sato</author>                  
   <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
